--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,1 +1,5 @@
-<p>Ruthie is highly stylized and elegant calligraphic script. It has ornate caps and lovely flowing lower case forms.</p>
+<p>
+  Ruthie is highly stylized and elegant calligraphic script.
+It has ornate caps and lovely flowing lower case forms.
+</p>
+
